// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineNotification rendering renders expected elements 1`] = `
<div
  className="InlineNotification InlineNotification--info"
>
  <InformationFilled
    className="InlineNotification__icon"
    size={20}
  />
  <div
    className="InlineNotification__wrapper"
  >
    <span>
      Test of notification
    </span>
  </div>
</div>
`;

exports[`InlineNotification rendering renders expected elements when className is set 1`] = `
<div
  className="InlineNotification InlineNotification--info TestClass"
>
  <InformationFilled
    className="InlineNotification__icon"
    size={20}
  />
  <div
    className="InlineNotification__wrapper"
  >
    <span>
      Test of notification
    </span>
  </div>
</div>
`;

exports[`InlineNotification rendering renders expected elements when title is set 1`] = `
<div
  className="InlineNotification InlineNotification--info"
>
  <InformationFilled
    className="InlineNotification__icon"
    size={20}
  />
  <div
    className="InlineNotification__wrapper"
  >
    <span
      className="InlineNotification__title"
    >
      Test title
    </span>
    <span>
      Test of notification
    </span>
  </div>
</div>
`;
